@@ -9,88 +9,86 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
+import java.math.BigDecimal;
 import java.net.URI;
-import java.util.List;
+import java.time.LocalDateTime;
+import java.time.YearMonth;
+import java.util.*;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/locacoes")
 @CrossOrigin(origins = "*")
 @RequiredArgsConstructor
 public class LocacaoController {
-    private final LocacaoService vendaService;
+
+    // renomeie se preferir para vendaService; aqui usei locacaoService para clareza
+    private final LocacaoService locacaoService;
     private final VeiculoService veiculoService;
 
     @PostMapping
-    public ResponseEntity<Locacao> criar(@Valid @RequestBody Locacao venda) {
-        // Garante que o veículo existe e carrega o objeto completo
+    public ResponseEntity<LocacaoDTO> criar(@Valid @RequestBody Locacao venda) {
+        // garante que o veículo existe (se passado)
         if (venda.getVeiculo() != null && venda.getVeiculo().getId() != null) {
-            var veiculo = veiculoService.obter(venda.getVeiculo().getId());
-            venda.setVeiculo(veiculo);
-        } else {
-            // se não veio veiculo ou id, reprovamos a requisição
-            return ResponseEntity.badRequest().build();
+            veiculoService.obter(venda.getVeiculo().getId());
         }
-
-        // Se o usuário não enviou precoPorDiaCustomizado, use o preço padrão do veículo
-        if (venda.getPrecoPorDiaCustomizado() == null) {
-            venda.setPrecoPorDiaCustomizado(venda.getVeiculo().getPreco());
-        }
-
-        // Opcional: defina precoPorDia (campo da entidade) como o valor efetivo por dia
-        venda.setPrecoPorDia(venda.getPrecoPorDiaCustomizado());
-
-        Locacao salvo = vendaService.criar(venda);
-        return ResponseEntity.created(URI.create("/locacoes/" + salvo.getId())).body(salvo);
+        Locacao salvo = locacaoService.criar(venda);
+        LocacaoDTO dto = new LocacaoDTO(salvo);
+        return ResponseEntity.created(URI.create("/locacoes/" + salvo.getId())).body(dto);
     }
 
     @GetMapping
     public List<LocacaoDTO> listar() {
-        return vendaService.listar()
-                .stream()
-                    .map(LocacaoDTO::new)
-                        .toList();
+        return locacaoService.listar().stream()
+                .map(LocacaoDTO::new)
+                .collect(Collectors.toList()); // compatível com Java 8+
     }
 
+    @GetMapping("/{id}")
+    public ResponseEntity<LocacaoDTO> obter(@PathVariable Long id) {
+        Locacao l = locacaoService.obter(id);
+        return ResponseEntity.ok(new LocacaoDTO(l));
+    }
+
+    @PutMapping("/{id}")
+    public ResponseEntity<LocacaoDTO> atualizar(@PathVariable Long id, @Valid @RequestBody Locacao venda) {
+        Locacao atualizado = locacaoService.atualizar(id, venda);
+        return ResponseEntity.ok(new LocacaoDTO(atualizado));
+    }
 
     @DeleteMapping("/{id}")
     public ResponseEntity<Void> deletarVenda(@PathVariable Long id) {
-        vendaService.deletarVenda(id);
+        locacaoService.remover(id);
         return ResponseEntity.noContent().build();
     }
 
-
     @GetMapping("/resumo-mensal")
-    public List<java.util.Map<String,Object>> resumoMensal() {
-        // Retorna lista: [{mes:1, ano:2025, lucro: 123.45}, ...]
-        var locacoes = vendaService.listar();
-        java.util.Map<String, java.math.BigDecimal> mapa = new java.util.HashMap<>();
-        for (var v : locacoes) {
-            var dto = new com.rafacar.dto.LocacaoDTO(v);
-            java.time.LocalDateTime dt = v.getDataVenda();
-            if (dt == null) dt = java.time.LocalDateTime.now();
-            String key = dt.getYear() + "-" + dt.getMonthValue();
-            java.math.BigDecimal acum = mapa.getOrDefault(key, java.math.BigDecimal.ZERO);
-            acum = acum.add(dto.getLucro());
-            mapa.put(key, acum);
+    public List<Map<String, Object>> resumoMensal() {
+        List<Locacao> locacoes = locacaoService.listar();
+        Map<YearMonth, BigDecimal> mapa = new HashMap<>();
+
+        for (Locacao v : locacoes) {
+            LocacaoDTO dto = new LocacaoDTO(v);
+            BigDecimal lucro = dto.getLucro() == null ? BigDecimal.ZERO : dto.getLucro();
+            LocalDateTime dt = v.getDataVenda() == null ? LocalDateTime.now() : v.getDataVenda();
+            YearMonth ym = YearMonth.from(dt);
+            mapa.put(ym, mapa.getOrDefault(ym, BigDecimal.ZERO).add(lucro));
         }
-        java.util.List<java.util.Map<String,Object>> out = new java.util.ArrayList<>();
-        for (var e : mapa.entrySet()) {
-            String[] parts = e.getKey().split("-");
-            int ano = Integer.parseInt(parts[0]);
-            int mes = Integer.parseInt(parts[1]);
-            java.util.Map<String,Object> m = new java.util.HashMap<>();
-            m.put("ano", ano);
-            m.put("mes", mes);
-            m.put("lucro", e.getValue());
-            out.add(m);
-        }
-        // ordenar por ano/mes desc
-        out.sort((a,b) -> {
-            int ay = ((Integer)b.get("ano")).compareTo((Integer)a.get("ano"));
-            if (ay!=0) return ay;
-            return ((Integer)b.get("mes")).compareTo((Integer)a.get("mes"));
-        });
+
+        // transformar em lista de maps e ordenar por ano/mes desc
+        List<Map<String, Object>> out = mapa.entrySet().stream()
+                .map(e -> {
+                    Map<String, Object> m = new HashMap<>();
+                    m.put("ano", e.getKey().getYear());
+                    m.put("mes", e.getKey().getMonthValue());
+                    m.put("lucro", e.getValue());
+                    return m;
+                })
+                .sorted(Comparator
+                        .comparing((Map<String, Object> m) -> (Integer) m.get("ano")).reversed()
+                        .thenComparing(m -> (Integer) m.get("mes"), Comparator.reverseOrder()))
+                .collect(Collectors.toList());
+
         return out;
     }
-
 }
